--- a/html/evos.html
+++ b/html/evos.html
@@ -74,6 +74,9 @@
                                     <a class="nav-link" href="time.html">Times & Days</a>
                                 </li>
                                 <li class="nav-item">
+                                  <a class="nav-link" href="data.html">Data</a>
+                                </li>
+                                <li class="nav-item">
                                     <hr>
                                 </li>
                                 <li class="nav-item">
@@ -147,6 +150,23 @@
                         </div>
                       </div>
                       <div id="plot3" class="rq-plot fullwidth-plot"></div>
+                    </div>
+                    <div id="plot-area4" class="plot-area">
+                      <div class="flex-container">
+                        <div class="flex-child">
+                          <div id="text4" class="rq-text">
+                              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                          </div>
+                        </div> 
+                        <div class="flex-child">
+                          <div id="plot4load" class="clearfix" style="margin-top: 60px;">
+                            <div class="spinner-border" role="status">
+                              <span class="visually-hidden">Loading...</span>
+                            </div>
+                          </div>
+                          <div id="plot4" class="rq-plot fullwidth-plot" style="margin-top: 60px;"></div>
+                        </div>
+                      </div>
                     </div>
                 </div>
                 <div class="horizontal-line"></div>
