--- a/html/level.html
+++ b/html/level.html
@@ -74,6 +74,9 @@
                                     <a class="nav-link" href="time.html">Times & Days</a>
                                 </li>
                                 <li class="nav-item">
+                                  <a class="nav-link" href="data.html">Data</a>
+                                </li>
+                                <li class="nav-item">
                                     <hr>
                                 </li>
                                 <li class="nav-item">
@@ -127,26 +130,72 @@
                     </div>
                     <!-- End of block for text and corresponding graphic -->
                     <div id="plot-area2" class="plot-area">
-                        <div id="text2" class="rq-text">
-                            <p>rq-text 2</p>
-                        </div>
-                        <div id="plot2load" class="clearfix">
-                          <div class="spinner-border" role="status">
-                            <span class="visually-hidden">Loading...</span>
+                      <div id="text2" class="rq-text">
+                          <p>rq-text 2</p>
+                      </div>
+                      <div class="flex-container">
+                        <div class="flex-child max-width">
+                          <div id="plot2load" class="clearfix">
+                            <div class="spinner-border" role="status">
+                              <span class="visually-hidden">Loading...</span>
+                            </div>
                           </div>
+                          <div id="plot2" class="rq-plot fullwidth-plot"></div>
                         </div>
-                        <div id="plot2" class="rq-plot fullwidth-plot"></div>
+                        <div class="flex-child max-width">
+                          <div id="plot3load" class="clearfix">
+                            <div class="spinner-border" role="status">
+                              <span class="visually-hidden">Loading...</span>
+                            </div>
+                          </div>
+                          <div id="plot3" class="rq-plot fullwidth-plot"></div>
+                        </div>
+                      </div>
                     </div>
                     <div id="plot-area3" class="plot-area">
                       <div id="text3" class="rq-text">
                           <p>rq-text 3</p>
                       </div>
-                      <div id="plot3load" class="clearfix">
+                      <div id="plot4load" class="clearfix">
                         <div class="spinner-border" role="status">
                           <span class="visually-hidden">Loading...</span>
                         </div>
                       </div>
-                      <div id="plot3" class="rq-plot fullwidth-plot"></div>
+                      <div id="plot4" class="rq-plot fullwidth-plot"></div>
+                    </div>
+                    <div id="plot-area4" class="plot-area">
+                      <div id="text4" class="rq-text">
+                          <p>rq-text 2</p>
+                      </div>
+                      <div class="flex-container">
+                        <div class="flex-child max-width">
+                          <div id="plot5load" class="clearfix">
+                            <div class="spinner-border" role="status">
+                              <span class="visually-hidden">Loading...</span>
+                            </div>
+                          </div>
+                          <div id="plot5" class="rq-plot fullwidth-plot"></div>
+                        </div>
+                        <div class="flex-child max-width">
+                          <div id="plot6load" class="clearfix">
+                            <div class="spinner-border" role="status">
+                              <span class="visually-hidden">Loading...</span>
+                            </div>
+                          </div>
+                          <div id="plot6" class="rq-plot fullwidth-plot"></div>
+                        </div>
+                      </div>
+                    </div>
+                    <div id="plot-area5" class="plot-area">
+                      <div id="text3" class="rq-text">
+                          <p>rq-text 3</p>
+                      </div>
+                      <div id="plot7load" class="clearfix">
+                        <div class="spinner-border" role="status">
+                          <span class="visually-hidden">Loading...</span>
+                        </div>
+                      </div>
+                      <div id="plot7" class="rq-plot center-plot"></div>
                     </div>
                 </div>
                 <div class="horizontal-line"></div>
