--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
                                 <a class="nav-link" href="html/time.html">Times & Days</a>
                             </li>
                             <li class="nav-item">
+                              <a class="nav-link" href="html/data.html">Data</a>
+                          </li>
+                            <li class="nav-item">
                                 <hr>
                             </li>
                             <li class="nav-item">
